--- a/index.html
+++ b/index.html
@@ -12,12 +12,11 @@
         <div class="nav-container">
             <a href="#home">Home</a>
             <a href="#about">About</a>
-            <a href="#contact us">Contact Us</a>
-            <a href="Post.html">Post</a> 
+            <a href="#content">Content</a>
             <input
                 type="text"
                 id="search-bar"
-                placeholder="Search properties..."  
+                placeholder="Search properties..."
                 oninput="searchProperties()"
             />
         </div>
@@ -73,12 +72,12 @@
     </header>
 
     <main id="content">
+        <!-- Featured Properties -->
         <section>
             <h2>Featured Properties</h2>
             <div id="property-list"></div>
             <p id="no-results" class="hidden">Result Not Found</p>
         </section>
-
 
         <!-- Landlord Post Section -->
         <section id="post-house-section">
@@ -109,9 +108,13 @@
                     <textarea id="description" name="description" placeholder="Enter house description" required></textarea>
                 </div>
                 <div class="form-group">
-                <label for="images">Images (Select images from your local drive):</label>
-                <input type="file" id="images" name="images" accept="image/*" multiple required>
-            </div>
+                    <label for="listing-images">Listing Images (Main image for the property):</label>
+                    <input type="file" id="listing-images" name="listing-images" accept="image/*" multiple required>
+                </div>
+                <div class="form-group">
+                    <label for="details-images">House Detail Images (Images for inside, garden, etc.):</label>
+                    <input type="file" id="details-images" name="details-images" accept="image/*" multiple required>
+                </div>
                 <button type="submit" class="submit-button">Post House</button>
             </form>
         </section>
